# nexus-actor-rs

./: .editorconfig  .gitignore  .mcp.json  .mise.toml  .tool-versions  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile.toml  PROJECT_STATUS.md  README.md  analysis.json  build.rs  core_dependency_analysis.md  core_dependency_status.md  coverage.sh  priority_issues.md  progress.md  refactoring_action_plan.md  refactoring_todos.md  renovate.json  sonar-project.properties
bench/: Cargo.toml
bench/benches/: actor_context_lock.rs  dispatcher_queue_latency.rs  mailbox_throughput.rs  queue_throughput.rs  reentrancy.rs
bench/src/: lib.rs
cluster/: Cargo.toml  build.rs
cluster/examples/: virtual_actor_basic.rs
cluster/src/: cluster.rs  config.rs  consensus_check.rs  generated.rs  gossip.rs  gossip_state.rs  identity.rs  identity_lookup.rs  lib.rs  member_state_delta.rs  messages.rs  metrics.rs  provider.rs  virtual_actor.rs
cluster/src/cluster/: tests.rs
cluster/src/partition/: manager.rs  placement_actor.rs
core/: Cargo.toml  build.rs  circular_dependency_progress.md
core/examples/: receive_timeout_delayqueue.rs
core/examples/actor-advanced-migration/: main.rs
core/examples/actor-auto-respond/: main.rs
core/examples/actor-autorespond/: main.rs
core/examples/actor-back-pressure/: main.rs
core/examples/actor-backpressure/: main.rs
core/examples/actor-base-traits/: main.rs
core/examples/actor-base-with-props/: main.rs
core/examples/actor-dead-letter/: main.rs
core/examples/actor-dual-support/: main.rs
core/examples/actor-hello-world/: main.rs
core/examples/actor-lifecycle-events/: main.rs
core/examples/actor-mailbox-middleware/: main.rs
core/examples/actor-migration/: main.rs
core/examples/actor-parent-child/: main.rs
core/examples/actor-receive-middleware/: main.rs
core/examples/actor-request-response/: main.rs
core/examples/actor-supervision/: main.rs
core/examples/remote-activate/: main.rs
core/proto/: actor.proto  remote.proto
core/src/: actor.rs  extensions.rs  generated.rs  lib.rs  remote.rs  telemetry.rs  util.rs
core/src/actor/: actor.rs  actor_behavior.rs  actor_behavior_test.rs  actor_error.rs  actor_example_test.rs  actor_handle.rs  actor_process.rs  actor_producer.rs  actor_receiver.rs  actor_system.rs  actor_system_test.rs  child_test.rs  config.rs  config_option.rs  context.rs  context_decorator.rs  core.rs  core_types.rs  dispatch.rs  error_reason.rs  event_stream.rs  guardian.rs  interaction_test.rs  lifecycle.rs  message.rs  metrics.rs  middleware_chain.rs  mod.rs  pid.rs  pid_set_test.rs  process.rs  process_registry.rs  props.rs  receive_timeout_test.rs  receiver_middleware.rs  receiver_middleware_chain.rs  restart_statistics.rs  sender_middleware.rs  sender_middleware_chain.rs  spawn_example_test.rs  (+13 more)
core/src/cluster/: messages.rs
core/src/ctxext/: extensions.rs
core/src/event_stream/: event.rs  event_handler.rs  event_stream.rs  event_stream_impl.rs  event_stream_test.rs  mod.rs  predicate.rs  stream.rs  subscription.rs
core/src/metrics/: actor_metrics.rs  error.rs  proto_metrics.rs
core/src/remote/: activator_actor.rs  block_list.rs  config.rs  config_option.rs  endpoint.rs  endpoint_lazy.rs  endpoint_manager.rs  endpoint_reader.rs  endpoint_supervisor.rs  endpoint_watcher.rs  endpoint_writer.rs  endpoint_writer_mailbox.rs  messages.rs  remote.rs  remote_process.rs  response_status_code.rs  serializer.rs
core/src/util/: queue.rs
core/tests/: actor.rs  integration_test.rs
core/tests/actor/: actor_system_test.rs  interaction_test.rs
modules/actor-core/: Cargo.toml
modules/actor-core/.tracing/: actor_context.toml
modules/actor-core/benches/: metadata_table.rs
modules/actor-core/docs/: api_inventory.md
modules/actor-core/src/: actor.rs  actor_id.rs  actor_path.rs  actor_ref.rs  api.rs  context.rs  error.rs  escalation.rs  extensions.rs  failure.rs  failure_event_stream.rs  guardian.rs  lib.rs  mailbox.rs  platform.rs  runtime.rs  scheduler.rs  shared.rs  state.rs  supervisor.rs  system.rs  typed.rs
modules/actor-embedded/: Cargo.toml  memory.x
modules/actor-embedded/examples/: embassy_run_forever.rs  rp2040_basic.rs  rp2040_behaviors_greeter.rs  rp2040_led.rs  rp2350_arc.rs  rp2350_behaviors_greeter.rs
modules/actor-embedded/src/: arc_mailbox.rs  arc_priority_mailbox.rs  embassy_dispatcher.rs  embedded.rs  lib.rs  local_mailbox.rs  mailbox.rs  runtime_driver.rs  shared.rs  spawn.rs  state.rs  tests.rs  timer.rs
modules/actor-embedded/tests/: runtime_driver.rs
modules/actor-std/: Cargo.toml
modules/actor-std/benches/: actor_context_lock.rs  dispatcher_queue_latency.rs  mailbox_throughput.rs  reentrancy.rs
modules/actor-std/examples/: behaviors_greeter.rs  tokio_run_forever.rs
modules/actor-std/src/: event_stream.rs  failure_event_bridge.rs  failure_event_hub.rs  lib.rs  mailbox.rs  metrics.rs  receive_timeout.rs  runtime.rs  runtime_driver.rs  spawn.rs  state.rs  timer.rs  tokio_mailbox.rs  (+1 more)
modules/bench/: Cargo.toml
modules/cluster-core/: Cargo.toml
modules/message-derive/: Cargo.toml
modules/message-derive-std/: Cargo.toml
modules/remote-core/: Cargo.toml
modules/remote-std/: Cargo.toml
modules/serialization-core/: Cargo.toml
modules/utils-core/: Cargo.toml
modules/utils-embedded/: Cargo.toml
modules/utils-std/: Cargo.toml
platform-tests/rp2040-hw-tests/: Cargo.toml  memory.x
platform-tests/rp2350-hw-tests/: Cargo.toml  link.x  memory.x
remote/: Cargo.toml  build.rs
remote/proto/: cluster.proto  gossip.proto  pubsub.proto
remote/src/: activator_actor.rs  block_list.rs  config.rs  config_option.rs  endpoint.rs  endpoint_lazy.rs  endpoint_manager.rs  endpoint_reader.rs  endpoint_state.rs  endpoint_supervisor.rs  endpoint_watcher.rs  endpoint_writer.rs  endpoint_writer_mailbox.rs  generated.rs  lib.rs  message_decoder.rs  messages.rs  metrics.rs  remote.rs  remote_actor_test.rs  remote_process.rs  response_status_code.rs  serializer.rs  tests.rs
utils/: Cargo.toml
utils/src/: collections.rs  concurrent.rs  lib.rs
(+1522 files in other folders)
