[workspace]
resolver = "2"
members = [
  "utils"
  ,"core"
  ,"message-derive"
  ,"remote"
  ,"cluster"
]

[workspace.dependencies]
async-trait = "0.1.77"
dashmap = "5.5.3"
futures = "0.3.30"
num_enum = "0.7.2"
once_cell = "1.19.0"
prost = "0.13.0"
prost-types = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
static_assertions = "1.1.0"
thiserror = "2.0.9"
tokio = { version = "1.37.0", features = ["full"] }
tonic = "0.12.3"
tonic-types = "0.12.3"
tracing = "0.1"
opentelemetry = { version = "0.27.1", features = ["metrics"] }
opentelemetry-otlp = { version = "0.27.0", features = ["grpc-tonic", "trace", "metrics"] }
opentelemetry-stdout = { version = "0.27.0", features = ["metrics"] }
opentelemetry_sdk = { version = "0.27.1", features = ["metrics", "rt-tokio", "testing"] }
tracing-opentelemetry = { version = "0.28.0", features = ["metrics"] }
