[workspace]
resolver = "2"
members = [
  "utils"
  ,"core"
  ,"message-derive"
  ,"remote"
  ,"cluster"
]

[workspace.dependencies]
async-trait = "0.1.80"
dashmap = "6.0.0-rc.1"
futures = "0.3.31"
num_enum = "0.7.2"
once_cell = "1.19.0"
prost = "0.14.1"
prost-types = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
static_assertions = "1.1.0"
thiserror = "2.0.0"
tokio = { version = "1.37.0" , features = ["full"] }
tonic = "0.13.0"
tonic-types = "0.13.0"
tracing = "0.1"
