[workspace]
resolver = "2"
members = [
  "modules/utils-core",
  "modules/utils-std",
  "modules/utils-embedded",
  "modules/actor-core",
  "modules/actor-std",
  "modules/actor-embedded",
  "modules/remote-core",
  "modules/cluster-core",
  "platform-tests/rp2040-hw-tests",
  "platform-tests/rp2350-hw-tests"
]

[workspace.dependencies]
async-trait = "0.1.80"
dashmap = "6.0.0-rc.1"
futures = "0.3.31"
num_enum = "0.7.2"
once_cell = "1.19.0"
prost = "0.13.0"
prost-types = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
static_assertions = "1.1.0"
thiserror = "2.0.0"
tokio = { version = "1.37.0" , features = ["full", "test-util"] }
tokio-util = { version = "0.7.11", features = ["time"] }
tonic = "0.14.0"
tonic-types = "0.14.0"
tracing = "0.1"
regex = "1.11.0"
parking_lot = "0.12"
