[package]
name = "nexus-actor-cluster-rs"
version = "0.19.3"
edition = "2021"
description = "Cluster library for Nexus Actor"
license = "MIT OR Apache-2.0"
keywords = ["actor", "async"]
categories = ["asynchronous"]
repository = "https://github.com/j5ik2o/nexus-actor-rs"

[dependencies]
async-trait = { workspace = true }
bytes = "1.5.0"
dashmap = { workspace = true }
futures = { workspace = true }
log = "0.4.21"
nexus-actor-core-rs = { version = "0.*", path = "../core" }
num_enum = { workspace = true }
once_cell = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tonic-types = { workspace = true }

[build-dependencies]
tonic-build = { version = "0.12.2" }
