[package]
name = "nexus-actor-cluster-rs"
version = "0.0.1"
edition = "2021"
description = "Cluster library for Nexus Actor"
license = "MIT OR Apache-2.0"
keywords = [ "nexus", "actor", "cluster", "grpc", "tonic" ]
categories = [ "concurrency", "asynchronous", "network-programming" ]
readme = "../README.md"
repository = "https://github.com/j5ik2o/nexus-actor-rs"

[dependencies]
async-trait = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
nexus-actor-core-rs = { version = "1.*", path = "../core" }
num_enum = "0.7.2"
once_cell = "1.19.0"
prost = "0.13.0"
prost-types = "0.13"
thiserror = "2.0.0"
tokio = { version = "1.37.0" , features = ["full"] }
tonic = "0.13.0"
tonic-types = "0.14.0"
tracing = "0.1"

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
tonic-build = { version = "0.14.0" }
