[package]
name = "nexus-actor-core-rs"
version = "0.19.3"
edition = "2021"
build = "build.rs"
description = "Core library for Nexus Actor"
license = "MIT OR Apache-2.0"
keywords = [ "actors", "actor-model", "async", "tokio" ]
categories = [ "concurrency", "asynchronous", "network-programming" ]
readme = "../README.md"
repository = "https://github.com/j5ik2o/nexus-actor-rs"

[dependencies]
async-trait = "0.1.80"
backtrace = "0.3"
base64-string-rs = "0.0.1"
chrono = "0.4"
dashmap = { workspace = true }
futures = { workspace = true }
im = "15.0.0"
nexus-actor-message-derive-rs = { version = "0.*", path = "../message-derive" }
nexus-actor-utils-rs = { version = "0.*", path = "../utils" }
num_enum = "0.7.2"
once_cell = "1.19.0"
oni-comb-uri-rs = "0.2.1"
opentelemetry = { version = "0.25.0", features = ["metrics"] }
opentelemetry-otlp = { version = "0.25.0", features = ["grpc-tonic", "trace", "metrics"] }
opentelemetry-stdout = { version = "0.25.0", features = ["metrics"] }
opentelemetry_sdk = { version = "0.25.0", features = ["metrics", "rt-tokio", "testing"] }
prost = "0.13.0"
prost-types = "0.13"
rand = { version = "0.9.0-alpha.2", features = ["small_rng"] }
regex = "1.10.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
siphasher = "1.0.1"
static_assertions = "1.1.0"
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"
thiserror = "2.0.6"
time = "0.3.36"
tokio = { version = "1.37.0" , features = ["full"] }
tokio-condvar = "0.3.0"
tonic = "0.12.2"
tonic-types = "0.12.2"
tracing = "0.1"
tracing-futures = "0.2.5"
tracing-opentelemetry = { version = "0.28.0", features = ["metrics"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.9.0", features = ["v4"] }

[dev-dependencies]
clap = { version = "4.5.9", features = ["derive"] }
governor = "0.7.0"
humantime = "2.1"
rstest = "0.23.0"

[build-dependencies]
tonic-build = { version = "0.12.2" }
