[package]
name = "nexus-actor-core-rs"
version = "0.19.3"
edition = "2021"
build = "build.rs"
description = "Core library for Nexus Actor"
license = "MIT OR Apache-2.0"
keywords = ["actor", "async"]
categories = ["asynchronous"]
repository = "https://github.com/j5ik2o/nexus-actor-rs"

[dependencies]
async-trait = { workspace = true }
bytes = "1.5.0"
chrono = "0.4.35"
dashmap = { workspace = true }
futures = { workspace = true }
futures-util = "0.3.30"
http = "1.1.0"
log = "0.4.21"
nexus-actor-message-derive-rs = { version = "0.*", path = "../message-derive" }
nexus-actor-utils-rs = { version = "0.*", path = "../utils" }
num_enum = { workspace = true }
once_cell = { workspace = true }
oni-comb-uri-rs = "0.2.1"
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry-stdout = { workspace = true }
opentelemetry_sdk = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
rand = { version = "0.9.0-alpha.2", features = ["small_rng"] }
regex = "1.10.3"
serde = { workspace = true }
serde_json = { workspace = true }
siphasher = "1.0.1"
static_assertions = { workspace = true }
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"
thiserror = { workspace = true }
time = "0.3.36"
tokio = { workspace = true }
tokio-condvar = "0.3.0"
tonic = { workspace = true }
tonic-types = { workspace = true }
tracing = { workspace = true }
tracing-futures = "0.2.5"
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.9.0", features = ["v4"] }

[dev-dependencies]
clap = { version = "4.5.9", features = ["derive"] }
governor = "0.8.0"
humantime = "2.1"
rstest = "0.23.0"

[build-dependencies]
tonic-build = { version = "0.12.2" }
