[package]
name = "nexus-actor-remote-rs"
version = "0.0.0"
edition = "2021"
description = "Remote library for Nexus Actor"
license = "MIT OR Apache-2.0"
keywords = [ "nexus", "actor", "remote", "grpc", "tonic" ]
categories = [ "concurrency", "asynchronous", "network-programming" ]
readme = "../README.md"
repository = "https://github.com/j5ik2o/nexus-actor-rs"

[dependencies]
tracing = "0.1"
async-trait = "0.1.80"
once_cell = "1.19.0"
thiserror = "1.0.61"
num_enum = "0.7.2"
futures = "0.3.30"
tokio = { version = "1.37.0" , features = ["full"] }
prost = "0.13.0"
prost-types = "0.13"
tonic = "0.12.3"
tonic-types = "0.12.3"
dashmap = "6.0.0-rc.1"
nexus-actor-core-rs = { version = "0.*", path = "../core" }
nexus-actor-utils-rs = { version = "0.*", path = "../utils" }
nexus-actor-message-derive-rs = { version = "0.*", path = "../message-derive" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
tonic-build = { version = "0.12.2" }
