[package]
name = "nexus-actor-remote-rs"
version = "0.1.3"
edition = "2021"
description = "Remote library for Nexus Actor"
license = "MIT OR Apache-2.0"
keywords = [ "nexus", "actor", "remote", "grpc", "tonic" ]
categories = [ "concurrency", "asynchronous", "network-programming" ]
readme = "../README.md"
repository = "https://github.com/j5ik2o/nexus-actor-rs"

[dependencies]
async-trait = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
nexus-actor-core-rs = { version = "1.*", path = "../core" }
nexus-actor-message-derive-rs = { version = "0.*", path = "../message-derive" }
nexus-actor-utils-rs = { version = "0.*", path = "../utils" }
num_enum = { workspace = true }
once_cell = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json ={ workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tonic-types = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
tonic-build = { version = "0.13.0" }
