[package]
name = "nexus-actor-utils-rs"
version = "0.1.0"
edition = "2021"
description = "A Rust crate for Actor Utilities"
license = "MIT OR Apache-2.0"
keywords = [ "actors", "actor-model", "async", "tokio" ]
categories = [ "concurrency", "asynchronous", "network-programming" ]
readme = "../README.md"
repository = "https://github.com/j5ik2o/nexus-actor-rs"

[dependencies]
tracing = "0.1"
async-trait = "0.1.80"
thiserror = "1.0.61"
dashmap = "6.0.0-rc.1"
tokio = { version = "1.37.0" , features = ["full"] }
tokio-condvar = "0.3.0"
