[package]
name = "nexus-actor-utils-rs"
version = "0.1.0"
edition = "2021"
description = "Utility library for Nexus Actor"
license = "MIT OR Apache-2.0"
keywords = [ "nexus", "actor", "utils" ]
categories = [ "concurrency", "asynchronous", "network-programming" ]
readme = "../README.md"
repository = "https://github.com/j5ik2o/nexus-actor-rs"

[dependencies]
tracing = "0.1"
async-trait = "0.1.80"
thiserror = "1.0.61"
dashmap = "6.0.0-rc.1"
tokio = { version = "1.37.0" , features = ["full"] }
tokio-condvar = "0.3.0"


