[package]
name = "nexus-actor-utils-rs"
version = "0.3.0"
edition = "2021"
description = "Utility library for Nexus Actor"
license = "MIT OR Apache-2.0"
keywords = [ "nexus", "actor", "utils" ]
categories = [ "concurrency", "asynchronous", "network-programming" ]
readme = "../README.md"
repository = "https://github.com/j5ik2o/nexus-actor-rs"

[dependencies]
futures = { workspace = true }
async-trait = { workspace = true }
dashmap = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-condvar = "0.3.0"
tracing = { workspace = true }


