[package]
name = "nexus-actor-std-rs"
version = "0.1.0"
edition = "2021"
description = "Tokio-based runtime adapters for Nexus Actor"
license = "MIT OR Apache-2.0"
keywords = ["actors", "tokio", "runtime"]
categories = ["concurrency", "asynchronous"]
readme = "../../README.md"
repository = "https://github.com/j5ik2o/nexus-actor-rs"

[features]
default = ["rt-multi-thread"]
rt-multi-thread = ["tokio/rt-multi-thread"]
rt-current-thread = ["tokio/rt"]

[dependencies]
nexus-actor-core-rs = { path = "../actor-core", default-features = false, features = ["alloc", "std"] }
nexus-utils-std-rs = { path = "../utils-std" }
futures = "0.3"
tokio = { version = "1.37.0", default-features = false, features = ["macros", "sync", "time", "signal"] }

[dev-dependencies]
tokio = { version = "1.37.0", default-features = false, features = ["macros", "rt-multi-thread", "sync", "time", "signal"] }
