[package]
name = "nexus-cluster-core-rs"
version = "0.1.0"
edition = "2021"
description = "Cluster coordination scaffolding"
license = "MIT OR Apache-2.0"

[features]
default = ["std"]
alloc = []
std = ["alloc"]

[dependencies]
nexus-actor-core-rs = { path = "../actor-core", default-features = false, features = ["alloc"] }
nexus-remote-core-rs = { path = "../remote-core", default-features = false, features = ["alloc"] }
