[package]
name = "nexus-actor-message-derive-rs"
version = "0.11.3"
edition = "2021"
description = "A Rust crate for Actors message"
license = "MIT OR Apache-2.0"
keywords = [ "actors", "actor-model", "async", "tokio" ]
categories = [ "concurrency", "asynchronous", "network-programming" ]
readme = "../../README.md"
repository = "https://github.com/j5ik2o/nexus-actor-rs"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.36"
quote = "1.0.36"
syn = {version = "2.0.74", features = ["full", "extra-traits", "visit-mut", "visit"]}
