[package]
name = "nexus-remote-std-rs"
version = "0.5.1"
edition = "2021"
description = "Remote messaging library for Nexus Actor (std layer)"
license = "MIT OR Apache-2.0"
keywords = [ "nexus", "actor", "remote", "grpc", "tonic" ]
categories = [ "concurrency", "asynchronous", "network-programming" ]
readme = "../../README.md"
repository = "https://github.com/j5ik2o/nexus-actor-rs"

[dependencies]
async-trait = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
nexus-actor-std-rs = { version = "3.*", path = "../actor-std" }
nexus-actor-core-rs = { version = "3.*", path = "../actor-core", default-features = false, features = ["alloc"] }
nexus-message-derive-std-rs = { path = "../message-derive-std" }
nexus-utils-std-rs = { version = "0.*", path = "../utils-std" }
nexus-remote-core-rs = { path = "../remote-core" }
num_enum = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tonic-types = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }
url = "2.5"
opentelemetry = { version = "0.31.0", features = ["metrics"] }
arc-swap = "1.7"

[dev-dependencies]
bytes = "1.6"
http-body-util = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
criterion = { version = "0.5", features = ["async_tokio"] }

[build-dependencies]
tonic-build = { version = "0.13.0" }

[[bench]]
name = "endpoint_watch_registry"
harness = false
