[package]
name = "nexus-serialization-core-rs"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Core serialization abstractions shared across Nexus Actor modules"
publish = false

[features]
default = ["alloc"]
alloc = []
std = ["alloc", "nexus-utils-core-rs/std"]
serde = ["alloc", "dep:serde"]
serde-json = ["serde", "std", "dep:serde_json"]

[dependencies]
nexus-utils-core-rs = { path = "../utils-core", default-features = false, features = ["alloc"] }
spin = { version = "0.9", default-features = false, features = ["rwlock"] }
serde = { version = "1.0", default-features = false, optional = true }
serde_json = { version = "1.0", optional = true }
