[package]
name = "nexus-utils-embedded-rs"
version = "0.0.1"
edition = "2021"
description = "Embassy-oriented async primitives for Nexus"
license = "MIT OR Apache-2.0"
keywords = ["async", "embedded", "mutex"]
categories = ["concurrency", "embedded"]
readme = "../../README.md"
repository = "https://github.com/j5ik2o/nexus-actor-rs"

[features]
default = ["rc"]
rc = ["dep:embassy-sync"]
arc = ["dep:embassy-sync", "dep:critical-section"]
std = []
embassy = ["arc", "dep:embassy-time", "dep:embassy-futures"]

[dependencies]
embassy-sync = { version = "0.7", default-features = false, optional = true }
embassy-time = { version = "0.5", default-features = false, optional = true }
critical-section = { version = "1.2", optional = true }
embassy-futures = { version = "0.1", default-features = false, optional = true }
nexus-utils-core-rs = { path = "../utils-core", default-features = false, features = ["alloc"] }

[dev-dependencies]
static_assertions = { workspace = true }

[target.'cfg(not(target_os = "none"))'.dev-dependencies]
futures = { version = "0.3", default-features = false, features = ["alloc", "executor", "std", "async-await"] }
